# cinch-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cinch-code/: Cargo.toml
crates/cinch-code/src/: config.rs  lib.rs  main.rs  prompt.rs
crates/cinch-code/src/tools/: git.rs  mod.rs
crates/cinch-rs/: Cargo.toml  README.md
crates/cinch-rs/docs/: DATA-FLOWS.md  VISION.md
crates/cinch-rs/examples/: basic_agent.rs  custom_tools.rs
crates/cinch-rs/src/: lib.rs  main.rs  prelude.rs
crates/cinch-rs/src/agent/: checkpoint.rs  config.rs  events.rs  execution.rs  gather.rs  harness.rs  hooks.rs  memory.rs  mod.rs  plan_execute.rs  profile.rs  project_instructions.rs  session.rs  sub_agent.rs
crates/cinch-rs/src/agent/prompt/: builder.rs  mod.rs  reminders.rs  sections.rs
crates/cinch-rs/src/api/: mod.rs  retry.rs  router.rs  streaming.rs  tracing.rs
crates/cinch-rs/src/context/: budget.rs  eviction.rs  file_tracker.rs  layout.rs  mod.rs  summarizer.rs
crates/cinch-rs/src/tools/: budget.rs  cache.rs  common.rs  core.rs  dag.rs  filter.rs  mod.rs  names.rs  read_tracker.rs  reflection.rs  spec.rs
crates/cinch-rs/src/ui/: ask_user_tool.rs  event_handler.rs  mod.rs  question.rs  tracing.rs  traits.rs
crates/cinch-tui/: Cargo.toml
crates/cinch-tui/src/: app.rs  ext.rs  input.rs  lib.rs  render.rs
crates/cinch-web/: Cargo.toml
crates/cinch-web/frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
crates/cinch-web/frontend/app/: globals.css  layout.tsx  page.tsx
crates/cinch-web/frontend/components/: ChatInput.tsx  ChatStream.tsx  ConnectionStatus.tsx  InspectorPanel.tsx  LogViewer.tsx  Markdown.tsx  QuestionModal.tsx  StatusBar.tsx  StreamingText.tsx  ToolCall.tsx
crates/cinch-web/frontend/hooks/: useAgentSocket.ts  useAgentState.ts
crates/cinch-web/frontend/lib/: protocol.ts  types.ts
crates/cinch-web/src/: api.rs  broadcast.rs  ext.rs  lib.rs  main.rs  server.rs  snapshot.rs  ws.rs
crates/cinch-web/tests/: server_integration.rs
docs/: cinch-code-roadmap.md  claude-code-agent-analysis.md  claude-code-tool-system-analysis.md  codex-agent-analysis.md  codex-tool-system-analysis.md  pi-mono-analysis.md  tool-implementation-plan.md
