[package]
name = "cinch-tui"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
description = "Generic terminal UI for cinch-rs powered agents"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cinch-rs = { path = "../cinch-rs", version = "0.3.0" }
ratatui = "0.29"
crossterm = "0.29"
serde_json = "1"
